src/test/ui/error-codes/E0200.stderr
error[E0200]: the trait `Bar` requires an `unsafe impl` declaration
  --> $DIR/E0200.rs:15:1
   |
15 | impl Bar for Foo { } //~ ERROR E0200
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0200"
